--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^2.6.2",
+    "@tanstack/react-query": "^5.68.0",
+    "permissionless": "^0.2.36",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.23.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
